--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,16 @@
 {
-    "cSpell.words": [
-        "chatbotapp",
-        "checkmark",
-        "dotenv",
-        "paperplane",
-        "timelapse"
-    ]
+  "cSpell.words": [
+    "chatbotapp",
+    "checkmark",
+    "dotenv",
+    "paperplane",
+    "timelapse"
+  ],
+  "[dart]": {
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "editor.selectionHighlight": false,
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "editor.extractMethodOnType": true
+  }
 }
